--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,14 @@
 [globals]
 
-site=Simple Facts
-domain=dev.simple-facts.com
-email=noresponse@simple-facts.com
+site=Site Name
+domain=www.mydomain.com
+email=noresponse@mydomain.com
 emailverificationroute=validateemail
 sessionusername=user
 
-dbobject=dba
+dbobject=db
 dbhost=localhost
 dbport=3306
-dbname=nms_victus
-dbuser=vf
-dbpassword=12345678
+dbname=mydatabasename
+dbuser=mydatabaseuser
+dbpassword=mydatabasepass
