Introduced separate User object and added some unit testing

--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,6 @@
 [globals]
 
-site=Site Name
-domain=www.mydomain.com
-email=noresponse@mydomain.com
-emailverificationroute=validateemail
-sessionusername=user
+DEBUG=3
+UI=ui/
 
-dbobject=db
-dbhost=localhost
-dbport=3306
-dbname=mydatabasename
-dbuser=mydatabaseuser
-dbpassword=mydatabasepass
-
-fluidmode=true
+AUTOLOAD=src/
